--- a/apple.html
+++ b/apple.html
@@ -9,6 +9,13 @@
     <meta name="keywords" content="듣기, 2019년 최고의 음악 100선, Apple Music">
     <title>Apple Music App</title>
 
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="https://kchoon.github.io/apple/assets/icon/icon.jpg">
+    <link rel="apple-touch-icon-precomposed" href="https://kchoon.github.io/apple/assets/icon/icon.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="96x96" href="icons/favicon_96.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/favicon_144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="192x192" href="https://kchoon.github.io/apple/assets/icon/icon.jpg" />
+
     <!-- meta -->
     <meta name="format-detection" content="telephone=no">
     <meta property="og:title" content="뮤직 모바일 메인">
