--- a/apple.html
+++ b/apple.html
@@ -10,11 +10,11 @@
     <title>Apple Music App</title>
 
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="https://kchoon.github.io/apple/assets/icon/icon.jpg">
-    <link rel="apple-touch-icon-precomposed" href="https://kchoon.github.io/apple/assets/icon/icon.jpg" />
-    <link rel="apple-touch-icon-precomposed" sizes="96x96" href="icons/favicon_96.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/favicon_144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="192x192" href="https://kchoon.github.io/apple/assets/icon/icon.jpg" />
+    <link rel="shortcut icon" href="assets/icon/icon.jpg">
+    <link rel="apple-touch-icon-precomposed" href="assets/icon/icon.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="96x96" href="assets/icon/icon_96.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icon/icon_144.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="192x192" href="assets/icon/icon_192.jpg" />
 
     <!-- meta -->
     <meta name="format-detection" content="telephone=no">
