--- a/apple.html
+++ b/apple.html
@@ -20,14 +20,18 @@
     <meta name="format-detection" content="telephone=no">
     <meta property="og:title" content="뮤직 모바일 메인">
     <meta property="og:url" content="https://kchoon.github.io/apple">
-    <meta property="og:image" content="https://kchoon.github.io/apple/assets/icon/icon.jpg">
+    <meta property="og:image" content="assets/icon/icon.jpg">
     <meta property="og:description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="뮤직 모바일 메인">
     <meta name="twitter:url" content="https://kchoon.github.io/apple">
-    <meta name="twitter:image" content="https://kchoon.github.io/apple/assets/icon/icon.jpg">
+    <meta name="twitter:image" content="assets/icon/icon.jpg">
     <meta name="twitter:description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요">
 
+    <!-- style -->
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body> 
     <div class="hoon">1</div>
