--- a/apple.html
+++ b/apple.html
@@ -10,22 +10,22 @@
     <title>Apple Music App</title>
 
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="assets/icon/icon.jpg">
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/icon.jpg" />
-    <link rel="apple-touch-icon-precomposed" sizes="96x96" href="assets/icon/icon_96.jpg" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icon/icon_144.jpg" />
-    <link rel="apple-touch-icon-precomposed" sizes="192x192" href="assets/icon/icon_192.jpg" />
+    <link rel="shortcut icon" href="https://kchoon.github.io/apple/assets/icon/icon.jpg">
+    <link rel="apple-touch-icon-precomposed" href="https://kchoon.github.io/apple/assets/icon/icon.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="96x96" href="https://kchoon.github.io/apple/assets/icon/icon_96.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://kchoon.github.io/apple/assets/icon/icon_144.jpg" />
+    <link rel="apple-touch-icon-precomposed" sizes="192x192" href="https://kchoon.github.io/apple/assets/icon/icon_192.jpg" />
 
     <!-- meta -->
     <meta name="format-detection" content="telephone=no">
     <meta property="og:title" content="뮤직 모바일 메인">
     <meta property="og:url" content="https://kchoon.github.io/apple">
-    <meta property="og:image" content="assets/icon/icon.jpg">
+    <meta property="og:image" content="https://kchoon.github.io/apple/assets/icon/icon.jpg">
     <meta property="og:description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="뮤직 모바일 메인">
     <meta name="twitter:url" content="https://kchoon.github.io/apple">
-    <meta name="twitter:image" content="assets/icon/icon.jpg">
+    <meta name="twitter:image" content="https://kchoon.github.io/apple/assets/icon/icon.jpg">
     <meta name="twitter:description" content="뮤직 모바일 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요">
 
     <!-- style -->
